# HalalGoogleProfileProtector

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
src/halal_gpp/: __init__.py  app.py  crypto_core.py  ops.py
